@@ -1,3 +1,12 @@
+2000-11-17  Daniel Hagerty  <hag@linnaean.org>
+
+	* Traceroute.pm:
+	** Added a default value to debug instance variable, to avoid
+	perl warning
+	** Incremented version number to 1.03.
+	* test.pl:
+	** Turned on perl warnings.
+
 2000-08-15  Daniel Hagerty  <hag@linnaean.org>
 
 	* Traceroute.pm:
